# kokkos-resilience

./: .gitignore  .gitlab-ci.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile.resilience  Makefile.targets  README.md  build.sh  docker-compose.yml  spack-repo-index.yaml
ci/: packages.yaml  (+4 more)
examples/: CMakeLists.txt  SimpleCheckpoint.cpp  SimpleFileCheckpoint.cpp  benchmark_multiviews.cpp  benchmark_overhead.cpp  config.json  config_file.json  config_jacobi_more_async.json  file_test.cfg  jacobi.cpp  jacobi.hpp  ping_pong.cpp  simple_checkpoint.cpp
examples/jacobi/: config.cpp  config.hpp  config_jacobi.json  config_jacobi_1.json  config_jacobi_async.json  main.cpp  solver.cpp  solver.hpp
src/resilience/: AutomaticCheckpoint.cpp  AutomaticCheckpoint.hpp  CMakeLists.txt  CheckpointData.hpp  CheckpointFilter.hpp  Config.cpp  Config.hpp  Context.cpp  Context.hpp  Cref.cpp  Cref.hpp  ErrorHandler.hpp  Kokkos_ManualCheckpoint.hpp  Kokkos_ResCuda.hpp  Kokkos_ResCudaSpace.hpp  Kokkos_Resilience.hpp  MPIContext.cpp  MPIContext.hpp  ManualCheckpoint.hpp  MemProtect.hpp  Registration.cpp  Registration.hpp  Resilience.cpp  Resilience.hpp  ResilienceViewCopy.hpp  ResilientRef.cpp  ResilientRef.hpp  StdFileContext.cpp  StdFileContext.hpp  Utility.hpp  checkpoint.hpp  context.hpp  tracker.hpp
src/resilience/Cuda/: Kokkos_Cuda_ResParallel.hpp  Kokkos_ResCudaSpace.cpp
src/resilience/OpenMP/: CMakeLists.txt  OpenMPResParallel.hpp  ResHostSpace.cpp  ResHostSpace.hpp  ResOpenMP.cpp  ResOpenMP.hpp
src/resilience/backend/: Automatic.cpp  Automatic.hpp  AutomaticBase.hpp  Backend.cpp  Backend.hpp  CMakeLists.txt  FenixBackend.cpp  FenixBackend.hpp  StdFile.cpp  StdFile.hpp  StdFileBackend.cpp  StdFileBackend.hpp  Veloc.cpp  Veloc.hpp  VelocBackend.cpp  VelocBackend.hpp
src/resilience/backend/filesystem/: ExternalIOInterface.hpp
src/resilience/backend/hdf5/: HDF5Space.hpp
src/resilience/backend/stdfile/: CMakeLists.txt  StdFileBackend.cpp  StdFileBackend.hpp
src/resilience/backend/veloc/: CMakeLists.txt  VelocBackend.cpp  VelocBackend.hpp
src/resilience/config/: Config.cpp  Config.hpp  Config.hpp.in
src/resilience/context/: CMakeLists.txt  Context.cpp  Context.hpp  ContextBase.hpp  MPIContext.cpp  MPIContext.hpp  StdFileContext.cpp  StdFileContext.hpp  UncoordinatedContext.hpp  VTContext.cpp  VTContext.hpp  VTContext.impl.hpp
src/resilience/context/vt/: CMakeLists.txt  ProxyHolder.cpp  ProxyHolder.hpp  ProxyHolder.impl.hpp  ProxyMap.hpp  ProxyMap.impl.hpp  VTContext.cpp  VTContext.hpp  VTContext.impl.hpp  common.hpp
src/resilience/cuda/: CMakeLists.txt  CudaResParallel.hpp  Kokkos_Cuda_ResParallel.hpp  Kokkos_ResCuda.hpp  Kokkos_ResCudaSpace.cpp  Kokkos_ResCudaSpace.hpp  ResCuda.cpp  ResCuda.hpp  ResCudaParallel.hpp  ResCudaSpace.cpp  ResCudaSpace.hpp  ResCudaSubscriber.cpp  ResCudaSubscriber.hpp  benchmark_multiviews.cpp  test.txt
src/resilience/data_space/: CMakeLists.txt  DataSpace.hpp  HDF5Space.cpp  HDF5Space.hpp  StdFileSpace.cpp  StdFileSpace.hpp
src/resilience/exec/: TrackDuplicates.hpp
src/resilience/exec_space/: CMakeLists.txt  ExecSpace.hpp
src/resilience/exec_space/cuda/: CMakeLists.txt  CudaResParallel.hpp  ResCuda.cpp  ResCudaSpace.cpp  Resilient_Cuda.cpp  Resilient_Cuda.hpp  Resilient_CudaSpace.hpp  Resilient_Cuda_Duplicate_Map_Traversals.hpp  Resilient_Cuda_Error_Injector.hpp  Resilient_Cuda_Parallel_For.hpp  Resilient_Cuda_Subscriber.cpp  Resilient_Cuda_Subscriber.hpp  Resilient_Types.hpp
src/resilience/exec_space/openMP/: CMakeLists.txt  OpenMPResParallel.hpp  OpenMPResSubscriber.cpp  OpenMPResSubscriber.hpp  ResHostSpace.hpp  ResOpenMP.cpp  ResOpenMP.hpp  Resilient_OpenMP.cpp  Resilient_OpenMP.hpp  Resilient_OpenMP_Duplicate_Map_Traversals.hpp  Resilient_OpenMP_Error_Injector.hpp  (+4 more)
src/resilience/filesystem/: CMakeLists.txt  DirectoryManagement.hpp  ExternalIOInterface.cpp  ExternalIOInterface.hpp  Filesystem.cpp  Filesystem.hpp
src/resilience/hdf5/: CMakeLists.txt  HDF5Space.cpp  HDF5Space.hpp  Kokkos_HDF5Space.hpp
src/resilience/impl/: CMakeLists.txt  FileSpaceTypes.hpp  Kokkos_ExternalIOInterface.cpp  Kokkos_ExternalIOInterface.hpp  Kokkos_HDF5Space.cpp  Kokkos_HDF5Space.hpp  Kokkos_StdFileSpace.hpp  MirrorTracker.cpp  MirrorTracker.hpp  TrackDuplicates.cpp  TrackDuplicates.hpp  ViewCopySpecialization.hpp  ViewHookSpecialization.hpp
src/resilience/openMP/: .OpenMPResSubscriber.hpp.swo  CMakeLists.txt  OpenMPResParallel.hpp  OpenMPResSubscriber.cpp  OpenMPResSubscriber.hpp  ResHostSpace.cpp  ResHostSpace.hpp  ResOpenMP.cpp  ResOpenMP.hpp
src/resilience/registration/: CMakeLists.txt  Custom.cpp  Custom.hpp  Magistrate.hpp  Registration.cpp  Registration.hpp  Registration.impl.hpp  RegistrationHeaders.hpp  Simple.hpp  Specialized.hpp  VTProxy.hpp  ViewHolder.hpp
src/resilience/stdfile/: StdFileBackend.cpp  StdFileBackend.hpp
src/resilience/stdio/: CMakeLists.txt  Kokkos_StdFileSpace.cpp  Kokkos_StdFileSpace.hpp  StdFileSpace.cpp  StdFileSpace.hpp
src/resilience/util/: CMakeLists.txt  Timer.hpp  Trace.cpp  Trace.hpp  VTUtil.cpp  VTUtil.hpp  trace.cpp  trace.hpp  view_holder.hpp
src/resilience/veloc/: CMakeLists.txt  VelocBackend.cpp  VelocBackend.hpp  veloc_backend.cpp  veloc_backend.hpp
src/resilience/view_hooks/: CMakeLists.txt  DynamicViewHooks.cpp  DynamicViewHooks.hpp  ViewHolder.hpp
tests/: CMakeLists.txt  TestCommon.hpp  TestCudaResilientExecution.cpp  TestDynamicViewHooks.cpp  TestFenixMemoryBackend.cpp  TestHDF5Configuration.cpp  TestHooks.cpp  TestLambdaCapture.cpp  TestMDRange.hpp  TestMain.cpp  TestMiniMD.cpp  TestOpenMPResilientExecution.cpp  TestOpenMPResilientMDRange.cpp  TestOpenMPResilientMDRange.hpp  TestOpenMPResilientMDRange2.hpp  TestResOpenMP.cpp  TestResilience.cpp  TestStdFileBackend.cpp  TestSubcriber2.cpp  TestVelocMemoryBackend.cpp  TestViewCheckpoint.cpp  test_common.hpp  test_main.cpp  test_resilience.cpp  test_view_checkpoint.cpp
tests/data/: hdf5_test_config.json  veloc_test.cfg  veloc_test.cfg.in
tests/src/: CMakeLists.txt  TestViewCheckpoint.hpp
tests/src/cuda/: TestCuda_Resilience.cpp
(+19 files in other folders)
